# MCx86-Transassembler

./: .gitignore  .gitmodules  CMakeLists.txt  ComputerOpcodesInfo.cpp  ComputerTransassembler.cpp  IA32Mapping.cpp  IA32Mapping.h  IA32_instructions_mapping.csv  Instruction.h  README.md  Transassembler.cpp  Transassembler.h  elfio_patches.txt  encode_inst.sh
ProgramCore/: CMakeLists.txt  debug.sh  fib.c  linking.ld  run.bat  run.sh  start.c
assembly_preprocessor/: CMakeLists.txt  assembly_preprocessor.cpp
instruction_encoder_utility/: single_inst.S
mappings/: IA32_instructions_mapping.csv  computer_instructions.csv
tests/: CMakeLists.txt  InstructionConversionTests.cpp  InstructionConvertionTests.cpp
transassembler/: CMakeLists.txt  ComputerOpcodesInfo.h  IA32Mapping.cpp  IA32Mapping.h  Instruction.h  Transassembler.cpp  Transassembler.h
